--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <build>
     <plugins>
-        <plugin>
+        <!--<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <executions>
@@ -79,7 +79,7 @@
                     </manifest>
                 </archive>
             </configuration>
-        </plugin>
+        </plugin>-->
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
